# addcmd

./: README.md  pyproject.toml
src/addcmd/: main.py
