[project]
name = "addcmd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Khan Kibria", email = "khan.kibria@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "mkcmd",
    "tomlkit>=0.13.3",
]

[project.scripts]
addcmd = "addcmd.main:main"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[tool.uv.sources]
mkcmd = { git = "https://github.com/kkibria/mkcmd.git" }
